--- a/style/style.css
+++ b/style/style.css
@@ -178,6 +178,7 @@
 /*******TERCERA SECCION******/
 
 
+
 .title {
     height: max-content;
     width: -webkit-fill-available !important;
@@ -194,21 +195,75 @@
 }
 
 #ingresos {
-
     background: linear-gradient(90deg, #bdc3ff 0%, #00d2ff 100%);
     border-radius: 5px;
+    max-height: 362px;
 }
 
 #egresos {
     background: linear-gradient(90deg, #FF6767 0%, #fff454cd 100%);
     border-radius: 5px;
+    max-height: 362px;
 }
 
 #ingresos,
 #egresos {
-    max-height: 362px;
     padding: 1px;
     width: 100;
+}
+
+.btnd {
+    background-color: transparent;
+    position: relative;
+    border: none;
+    opacity: 0;
+    transition: opacity .5s ease;
+}
+
+#tablaEgresos:hover>tbody tr td button {
+    opacity: 1;
+}
+
+.btnd::after {
+    width: fit-content;
+    height: fit-content;
+    background-color: rgb(168, 7, 7);
+    padding: 4px 8px;
+    border-radius: 5px;
+    transition-property: opacity, visibility, top;
+    transition-duration: 2s;
+    transition-delay: .2s;
+    color: white;
+    font-size: 12px;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.icon {
+    transform: scale(1.2);
+    transition: .2s linear;
+}
+
+.btnd:hover>.icon {
+    transform: scale(1.5);
+}
+
+.btnd:hover>.icon path {
+    fill: rgb(168, 7, 7);
+}
+
+.btnd:hover::after {
+    visibility: visible;
+    opacity: 1;
+    top: -160%;
+}
+
+svg {
+    pointer-events: none !important;
+}
+
+path {
+    pointer-events: none !important;
 }
 
 @media (max-width:767px) {
